# VirtualDubLin

./: .gitignore  CMakeLists.txt  PLAN_UBUNTU_FFMPEG_CUDA.md  README.md
src/VDLib/: CMakeLists.txt
src/VDLib/source/: Dialog.cpp  UIProxies.cpp  fft.cpp
src/gui-qt/: CMakeLists.txt  CudaFilter.cu  CudaFilter.h  CudaFilter_dummy.cpp  CudaVDFilter.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegEncoder.cpp  FFmpegEncoder.h  FFmpegInputDriver.h  JobControlDialog.cpp  JobControlDialog.h  main.cpp  mainwindow.cpp  mainwindow.h
src/h/vd2/system/: VDScheduler.h  VDString.h  atomic.h  file.h  memory.h  progress.h  protscope.h  refcount.h  thread.h  time.h  vdstl.h  vdtypes.h  vectors.h  vectors_float.h  vectors_int.h  w32assist.h
src/system/: CMakeLists.txt
src/system/h/: stdafx.h
src/system/h/vd2/system/linux/: win32_compat.h
src/system/source/: Error.cpp  Fraction.cpp  VDScheduler.cpp  cpuaccel.cpp  date.cpp  debug.cpp  error_win32.cpp  file.cpp  fileasync.cpp  filesys.cpp  filewatcher.cpp  hash.cpp  int128.cpp  linearalloc.cpp  memory.cpp  process.cpp  profile.cpp  progress.cpp  registry.cpp  text.cpp  thread.cpp  thunk.cpp  time.cpp  vdstl.cpp  vectors.cpp  zip.cpp
